[package]
name = "to-uni"
version = "0.0.2"
authors = ["Christian Klauser <christianklauser@outlook.com>"]

[dependencies]
docopt="*"
rustc-serialize = "*"
yaml-rust = "*"
atomicwrites = "*"
stopwatch = "*"

[dependencies.env_logger]
git = "https://github.com/SealedSun/log.git"
branch = "timestamp"

[dependencies.log]
git = "https://github.com/SealedSun/log.git"
branch = "timestamp"

[dependencies.aho-corasick]
git = "https://github.com/SealedSun/aho-corasick.git"
branch = "stream-chunks"
